modified template styles

--- a/tasks/templates/index.html
+++ b/tasks/templates/index.html
@@ -1,37 +1,36 @@
 {% extends 'base.html' %} {% block body %}
 
-<div class="container">
+<div class="container "> <!--mt-4 margin -->
   <div class="row">
-    <section class="col-sm-4">
-      <h1>{{ current_user.username }}'s Tasks :</h1>
+    <section class="col-md-4 mt-4">
+      <h4>{{ current_user.username }}'s Tasks :</h4>
 
-      <ul>
+      <ul class="list-group">
         {% for task in users_task_list %}
 
-        <li>
-          <a href="{% url 'task:detail_task' task.id %}"
-            >id: {{ task.id }} -- {{ task.title }} -- {{task.status}}</a
-          >
-        </li>
+        <a
+          href="{% url 'task:detail_task' task.id %}"
+          class="list-group-item list-group-item-action"
+          >ID: {{ task.id }} -- {{ task.title }} -- {{task.status}}</a
+        >
 
         {% empty %}
         <p>You {{ current_user.username }} have no tasks</p>
         {% endfor %}
       </ul>
     </section>
-  
 
-  
-    <section class="col-sm-4">
-      <h1>{{ current_user.username }}'s Teams :</h1>
-      <ul>
+    <section class="col-md-4 mt-4">
+      <h4>{{ current_user.username }}'s Teams :</h4>
+      <ul class="list-group">
         {% for team in users_team %}
 
-        <li>
-          <a href="{% url 'task:detail_team' team.id %}"
-            >id: {{ team.id }} -- {{ team.name }}</a
-          >
-        </li>
+        <a
+          href="{% url 'task:detail_team' team.id %}"
+          class="list-group-item list-group-item-action"
+        >
+          ID: {{ team.id }} -- {{ team.name }}</a
+        >
 
         {% empty %}
         <p>You {{ current_user.username }} are not part of any teams</p>
@@ -39,19 +38,19 @@
       </ul>
     </section>
   </div>
-  
-  
+
   <div class="row">
-    <section class="col-sm-4">
-      <h1>Public Tasks</h1>
-      <ul>
+    <section class="col-md-4 mt-4">
+      <h4>Public Tasks :</h4>
+      <ul class="list-group">
         {% for task in public_task_list %}
 
-        <li>
-          <a href="{% url 'task:detail_task' task.id %}"
-            >id: {{ task.id }} -- {{ task.title }} -- {{task.status}}
-          </a>
-        </li>
+        <a
+          href="{% url 'task:detail_task' task.id %}"
+          class="list-group-item list-group-item-action"
+        >
+          ID: {{ task.id }} -- {{ task.title }} -- {{task.status}}
+        </a>
 
         {% empty %}
         <p>There are no tasks avaible.</p>
@@ -59,8 +58,6 @@
       </ul>
     </section>
   </div>
-
-  
 </div>
 
 {% endblock %}
