--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -2,45 +2,25 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=;, initial-scale=1.0" />
-    <!-- Favicon -->
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="/pictures/favicon/apple-touch-icon.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/pictures/favicon/favicon-32x32.png"
-    />
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/pictures/favicon/favicon-16x16.png"
-    />
-    <link rel="manifest" href="/pictures/favicon/site.webmanifest" />
-    <!--Google Font-->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap"
-      rel="stylesheet"
-    />
-    <!-- CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7"
-      crossorigin="anonymous"
-    />
-    <link rel="stylesheet" href="{% static 'tasks/styles.css' %}" />
-    <!-- Site Information -->
-    <title>TaskManager</title>
-  </head>
+      <meta charset="UTF-8">
+      <meta name="viewport" content="width=;, initial-scale=1.0">
+      <!-- Favicon -->
+      <link rel="apple-touch-icon" sizes="180x180" href="/pictures/favicon/apple-touch-icon.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="/pictures/favicon/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="/pictures/favicon/favicon-16x16.png">
+      <link rel="manifest" href="/pictures/favicon/site.webmanifest">
+      <!--Google Font-->
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+      <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+      <!-- CSS -->
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+      <link rel="stylesheet" href="{% static 'tasks/styles.css' %}">
+      <!-- Site Information -->
+      <title>TaskManager</title>
+  </head>  
+
   <body class="d-flex flex-column min-vh-100">
     <header>
       <nav class="navbar navbar-dark bg-dark">
