modified style with bootsrap and code organization

--- a/tasks/templates/base.html
+++ b/tasks/templates/base.html
@@ -112,10 +112,10 @@
           /></a>
         </li>
         <li>
-          <a href="https://www.facebook.com/">
+          <a href="https://github.com/ErkinTunc/App-Web-Gestion-De-taches">
             <img
-              src="/pictures/icons/facebook.png"
-              alt="Facebook logo link to social media page"
+              src="/pictures/icons/github.png"
+              alt="A Github logo link to its github repository page"
             />
           </a>
         </li>
