--- a/tasks/templates/admin-index.html
+++ b/tasks/templates/admin-index.html
@@ -32,7 +32,7 @@
 
   <!-- List Sections -->
   <section class="row">
-    <!-- Tasks -->
+    <!-- Tasks List -->
     <article class="col-lg-4 mb-4">
       <h4>Tasks</h4>
       <ul class="list-group">
@@ -49,7 +49,7 @@
       </ul>
     </article>
 
-    <!-- Teams -->
+    <!-- Teams List -->
     <article class="col-lg-4 mb-4">
       <h4>Teams</h4>
       <ul class="list-group">
@@ -66,7 +66,7 @@
       </ul>
     </article>
 
-    <!-- Users -->
+    <!-- Users List-->
     <article class="col-lg-4 mb-4">
       <h4>Users</h4>
       <ul class="list-group">
