--- a/tasks/templates/tasks/detail.html
+++ b/tasks/templates/tasks/detail.html
@@ -1,10 +1,11 @@
 {% extends 'base.html' %} {% block body %}
-<main class="container my-5">
+<div class="container my-5">
   <div class="card shadow-sm p-4">
     <!-- Title and Status -->
     <h1>{{ task.title }}</h1>
 
     <hr />
+
     <section>
       <h2>Status: {{ task.status }}</h2>
 
@@ -117,5 +118,5 @@
       >
     </section>
   </div>
-</main>
+</div>
 {% endblock %}
