--- a/tasks/templates/teams/team-form.html
+++ b/tasks/templates/teams/team-form.html
@@ -1,8 +1,13 @@
 {% extends 'base.html' %} {% block body %}
-<form method="POST">
-  {% csrf_token %}
-  <!-- this tag is used for security -->
-  {{form}}
-  <button type="submit">Save</button>
-</form>
+
+<div class="container my-5">
+  <div class="card shadow-sm p-4">
+    <form method="POST">
+      {% csrf_token %}
+      <!-- this tag is used for security -->
+      {{form}}
+      <button type="submit">Save</button>
+    </form>
+  </div>
+</div>
 {% endblock %}
