--- a/tasks/templates/tasks/task-form.html
+++ b/tasks/templates/tasks/task-form.html
@@ -1,12 +1,9 @@
 {% extends 'base.html' %} {% block body %}
-
 <div class="container my-5">
-  <div class="card shadow-sm p-4">
+  <div class="card p-4 shadow">
     <form method="POST">
-      {% csrf_token %}
-      <!-- this tag is used for security -->
-      {{form}}
-      <button type="submit">Save</button>
+      {% csrf_token %} {{ form.as_p }} <!-- as.p "means as paragraph" -->
+      <button type="submit" class="btn btn-primary mt-3">Save</button>
     </form>
   </div>
 </div>
