--- a/tasks/templates/teams/team-form.html
+++ b/tasks/templates/teams/team-form.html
@@ -1,12 +1,11 @@
 {% extends 'base.html' %} {% block body %}
-
 <div class="container my-5">
-  <div class="card shadow-sm p-4">
+  <div class="card p-4 shadow">
     <form method="POST">
       {% csrf_token %}
       <!-- this tag is used for security -->
-      {{form}}
-      <button type="submit">Save</button>
+      {{ form.as_p }}
+      <button type="submit" class="btn btn-primary mt-3">Save</button>
     </form>
   </div>
 </div>
