--- a/tasks/templates/users/user-delete.html
+++ b/tasks/templates/users/user-delete.html
@@ -1,8 +1,11 @@
 {% extends 'base.html' %} {% block body %}
-<form method="POST">
-  {% csrf_token %}
-  <h2>Are you sure you want to delete {{ user.user.username }}</h2>
-  <button type="submit">Confirm</button>
-</form>
-
+<div class="container my-5">
+  <div class="card shadow-sm p-4">
+    <form method="POST">
+      {% csrf_token %}
+      <h2>Are you sure you want to delete {{ user.user.username }}</h2>
+      <button type="submit" class="btn btn-danger">Confirm</button>
+    </form>
+  </div>
+</div>
 {% endblock %}
