correxted syntaxe mistake

--- a/tasks/static/tasks/styles.css
+++ b/tasks/static/tasks/styles.css
@@ -89,4 +89,4 @@ form select:focus {
   background-color: rgb(219, 190, 253);
   color: rgb(40, 15, 68);
   border-color: rgb(40, 15, 68);
-} */ */
+} */
